--- a/.xo-config.json
+++ b/.xo-config.json
@@ -26,7 +26,7 @@
             "error",
             {
                 "case": "kebabCase",
-                "ignore": ["\\[.+\\]\\.ts"]
+                "ignore": ["\\[.+\\]\\..*ts"]
             }
         ],
         "unicorn/no-array-for-each": "off",
