--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
         "paths": {
             "@/client/*": ["src/client/*"],
             "@/server/*": ["src/server/*"],
+            "@/shared/*": ["src/shared/*"],
             "@/pages/*": ["src/pages/*"],
             "@/types/*": ["src/types/*"],
             "@/data/*": ["data/*"],
