--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -4,6 +4,7 @@
         "types": ["node", "cypress", "@testing-library/cypress"],
         "noEmit": true,
         "noImplicitAny": true,
+        "strictNullChecks": true,
         "baseUrl": ".",
         "paths": {
             "@/support/*": ["support/*"]
