--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
         "@mui/icons-material": "^5.11.16",
         "@mui/material": "^5.11.16",
         "axios": "^1.3.5",
+        "http-method-enum": "^1.0.0",
+        "http-status-codes": "^2.2.0",
         "lodash.clonedeep": "^4.5.0",
         "lodash.groupby": "^4.6.0",
         "lodash.partition": "^4.6.0",
