--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
         "@mui/icons-material": "^5.11.16",
         "@mui/material": "^5.11.16",
         "axios": "^1.3.5",
+        "http-method-enum": "^1.0.0",
+        "http-status-codes": "^2.2.0",
         "lodash.clonedeep": "^4.5.0",
         "lodash.groupby": "^4.6.0",
         "lodash.partition": "^4.6.0",
@@ -67,6 +69,7 @@
         "eslint-config-xo-react": "^0.27.0",
         "eslint-plugin-jsx-a11y": "^6.7.1",
         "husky": "^8.0.3",
+        "isomorphic-fetch": "^3.0.0",
         "jest": "^29.5.0",
         "jest-environment-jsdom": "^29.5.0",
         "lint-staged": "^13.2.1",
