--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
         "isomorphic-fetch": "^3.0.0",
         "jest": "^29.5.0",
         "jest-environment-jsdom": "^29.5.0",
+        "jest-extended": "^4.0.0",
         "lint-staged": "^13.2.2",
         "node-mocks-http": "^1.12.2",
         "typescript": "5.0.4",
